fix: 🐛 align input and form control styles

--- a/src/themes/dark.css
+++ b/src/themes/dark.css
@@ -592,6 +592,12 @@
   --sl-button-font-size-medium: var(--sl-font-size-medium);
   --sl-button-font-size-large: var(--sl-font-size-large);
 
+  --sl-button-border-color-primary: var(--sl-color-primary-500);
+  --sl-button-border-color-success: var(--sl-color-success-500);
+  --sl-button-border-color-neutral: var(--sl-color-neutral-500);
+  --sl-button-border-color-warning: var(--sl-color-warning-500);
+  --sl-button-border-color-danger: var(--sl-color-danger-500);
+
   /* Inputs */
   --sl-input-height-x-small: 1.25rem;
   /* 20 */
@@ -605,11 +611,11 @@
   --sl-input-background-color: var(--sl-color-neutral-0);
   --sl-input-background-color-hover: var(--sl-input-background-color);
   --sl-input-background-color-focus: var(--sl-input-background-color);
-  --sl-input-background-color-disabled: var(--sl-color-neutral-100);
-  --sl-input-border-color: var(--sl-color-neutral-300);
+  --sl-input-background-color-disabled: var(--sl-color-neutral-300);
+  --sl-input-border-color: var(--sl-border-color-default);
   --sl-input-border-color-hover: var(--sl-color-neutral-400);
   --sl-input-border-color-focus: var(--sl-color-primary-500);
-  --sl-input-border-color-disabled: var(--sl-color-neutral-300);
+  --sl-input-border-color-disabled: var(--sl-color-neutral-400);
   --sl-input-border-width: 1px;
   --sl-input-required-content: '*';
   --sl-input-required-content-offset: -2px;
@@ -630,7 +636,7 @@
   --sl-input-color: var(--sl-color-neutral-700);
   --sl-input-color-hover: var(--sl-color-neutral-700);
   --sl-input-color-focus: var(--sl-color-neutral-700);
-  --sl-input-color-disabled: var(--sl-color-neutral-900);
+  --sl-input-color-disabled: var(--sl-color-neutral-950);
   --sl-input-icon-color: var(--sl-color-neutral-500);
   --sl-input-icon-color-hover: var(--sl-color-neutral-600);
   --sl-input-icon-color-focus: var(--sl-color-neutral-600);
@@ -653,16 +659,25 @@
   --sl-input-filled-color-disabled: var(--sl-color-neutral-800);
 
   /* Labels */
+  --sl-input-label-font-size-x-small: var(--sl-font-size-x-small);
   --sl-input-label-font-size-small: var(--sl-font-size-small);
   --sl-input-label-font-size-medium: var(--sl-font-size-medium);
   --sl-input-label-font-size-large: var(--sl-font-size-large);
   --sl-input-label-color: inherit;
 
   /* Help text */
-  --sl-input-help-text-font-size-small: var(--sl-font-size-x-small);
-  --sl-input-help-text-font-size-medium: var(--sl-font-size-small);
-  --sl-input-help-text-font-size-large: var(--sl-font-size-medium);
+  --sl-input-help-text-font-size-2x-small: var(--sl-font-size-2x-small);
+  --sl-input-help-text-font-size-small: var(--sl-font-size-small);
+  --sl-input-help-text-font-size-medium: var(--sl-font-size-medium);
+  --sl-input-help-text-font-size-large: var(--sl-font-size-large);
   --sl-input-help-text-color: var(--sl-color-neutral-500);
+
+  /* Error text */
+  --sl-input-error-text-font-size-2x-small: var(--sl-font-size-2x-small);
+  --sl-input-error-text-font-size-small: var(--sl-font-size-small);
+  --sl-input-error-text-font-size-medium: var(--sl-font-size-medium);
+  --sl-input-error-text-font-size-large: var(--sl-font-size-large);
+  --sl-input-error-text-color: var(--sl-color-danger-500);
 
   /* Toggles (checkboxes, radios, switches) */
   --sl-toggle-size-small: 0.875rem;
@@ -673,22 +688,22 @@
   /* 22px */
 
   /*
-   * Overlays
-   */
+     * Overlays
+     */
 
-  --sl-overlay-background-color: hsl(0 0% 0% / 43%);
+  --sl-overlay-background-color: hsl(240 3.8% 46.1% / 33%);
 
   /*
-   * Panels
-   */
+     * Panels
+     */
 
-  --sl-panel-background-color: var(--sl-color-neutral-50);
+  --sl-panel-background-color: var(--sl-color-neutral-0);
   --sl-panel-border-color: var(--sl-color-neutral-200);
   --sl-panel-border-width: 1px;
 
   /*
-   * Tooltips
-   */
+     * Tooltips
+     */
 
   --sl-tooltip-border-radius: var(--sl-border-radius-medium);
   --sl-tooltip-background-color: var(--sl-color-neutral-800);
@@ -701,8 +716,8 @@
   --sl-tooltip-arrow-size: 6px;
 
   /*
-   * Z-indexes
-   */
+     * Z-indexes
+     */
 
   --sl-z-index-drawer: 700;
   --sl-z-index-dialog: 800;
