--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -661,16 +661,25 @@
   --sl-input-filled-color-disabled: var(--sl-color-neutral-800);
 
   /* Labels */
+  --sl-input-label-font-size-x-small: var(--sl-font-size-x-small);
   --sl-input-label-font-size-small: var(--sl-font-size-small);
   --sl-input-label-font-size-medium: var(--sl-font-size-medium);
   --sl-input-label-font-size-large: var(--sl-font-size-large);
   --sl-input-label-color: inherit;
 
   /* Help text */
-  --sl-input-help-text-font-size-small: var(--sl-font-size-x-small);
-  --sl-input-help-text-font-size-medium: var(--sl-font-size-small);
-  --sl-input-help-text-font-size-large: var(--sl-font-size-medium);
+  --sl-input-help-text-font-size-2x-small: var(--sl-font-size-2x-small);
+  --sl-input-help-text-font-size-small: var(--sl-font-size-small);
+  --sl-input-help-text-font-size-medium: var(--sl-font-size-medium);
+  --sl-input-help-text-font-size-large: var(--sl-font-size-large);
   --sl-input-help-text-color: var(--sl-color-neutral-500);
+
+  /* Error text */
+  --sl-input-error-text-font-size-2x-small: var(--sl-font-size-2x-small);
+  --sl-input-error-text-font-size-small: var(--sl-font-size-small);
+  --sl-input-error-text-font-size-medium: var(--sl-font-size-medium);
+  --sl-input-error-text-font-size-large: var(--sl-font-size-large);
+  --sl-input-error-text-color: var(--sl-color-danger-500);
 
   /* Toggles (checkboxes, radios, switches) */
   --sl-toggle-size-small: 0.875rem;
